# guardctl

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: audit.rs  fs_util.rs  hook.rs  init.rs  main.rs  project.rs  state.rs
src/guards/: bash.rs  file_write.rs  mcp.rs  mod.rs
tests/: check_pipe.rs
