[package]
name = "guardctl"
version = "0.1.0"
edition = "2024"
description = "Blast-radius guard for Claude Code autonomous sessions"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[profile.release]
strip = true
lto = true
